# pasterust

./: .gitignore  LICENSE  README.md  biome.json  index.html  package-lock.json  package.json  renovate.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build-test.yml  ci.yml  release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  error.rs  file_filters.rs  lib.rs  main.rs  scanner.rs  tokenizer.rs
src/components/: ContextUsagePanel.tsx  FileControls.tsx  FileIcon.tsx  FileTreePanel.tsx  PromptPanel.tsx  SelectedFilesList.tsx  TaskTypePanel.tsx  TitleBar.tsx  TreeNode.tsx
src/data/: llmModels.ts  taskTypes.ts
src/hooks/: useFileSelection.ts  useFileTree.ts
src/types/: index.ts
src/utils/: fileUtils.ts  promptBuilder.ts  searchUtils.ts
