[package]
name = "pasterust"
version = "0.1.0"
description = "Source Code Context Generator"
authors = ["sqdshguy"]
edition = "2024"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[lib]
name = "pasterust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
tiktoken-rs = "0.7.0"
once_cell = "1"
rayon = "1.10.0"
memmap2 = "0.9.5"
simdutf8 = "0.1"
