[package]
name = "pasterust"
version = "0.2.0"
description = "Source Code Context Generator"
authors = ["sqdshguy"]
edition = "2024"

[features]
default = ["parallel"]
parallel = []

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[lib]
name = "pasterust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
tokio = { version = "1", features = ["full"] }
tiktoken-rs = "0.9"
once_cell = "1"
rayon = "1.11"
memmap2 = "0.9"
simdutf8 = "0.1"
memchr = "2.7"
